--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,23 @@
 version: '2'
 services:
-  db:
-    image: klaemo/couchdb
+  couchdb:
+    image: frodenas/couchdb:1.6
+    environment:
+      COUCHDB_USERNAME: "uname"
+      COUCHDB_PASSWORD: "passwd"
+      COUCHDB_DBNAME: "pollstr"
     ports:
       - "5984:5984"
   worker:
     build: .
     env_file: .env
+    environment:
+      COUCHDB_URL: "uname:passwd@couchdb:5984"
     links:
-      - db
+      - couchdb
     volumes:
       - .:/usr/src/app
     ports:
       - "8000:8000"
     depends_on:
-      - db
+      - couchdb
