--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "mocha": "2.4.5"
   },
   "dependencies": {
-    "cradle": "0.7.1",
+    "nano": "^6.2.0",
     "ramda": "0.20.0",
     "twit": "^2.2.3",
     "twitter": "1.2.5"
