--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     build: .
     env_file: .env
     environment:
-      COUCHDB_URL: "uname:passwd@couchdb:5984"
+      COUCHDB_URL: "uname:passwd@couchdb:5984/pollstr"
     links:
       - couchdb
     volumes:
