--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     links:
       - couchdb
     volumes:
-      - .:/usr/src/app
+      - ./src:/usr/src/app/src
     ports:
       - "8000:8000"
     depends_on:
