--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
   },
   "homepage": "https://github.com/lionbear/pollstr#readme",
   "devDependencies": {
-    "mocha": "2.4.5"
+    "chai": "^3.5.0",
+    "mocha": "^2.4.5"
   },
   "dependencies": {
+    "bluebird": "^3.3.5",
     "nano": "^6.2.0",
     "ramda": "0.20.0",
-    "twit": "^2.2.3",
-    "twitter": "1.2.5"
+    "twit": "^2.2.3"
   }
 }
